--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "setup-dbs": "psql -f ./db/setup.sql",
-    "seed": "knex seed:run",
+    "seed": "NODE_ENV=test knex seed:run",
     "test-utils": "mocha spec/utils.spec.js",
     "test": "mocha spec/app.spec.js",
     "migrate-make": "knex migrate:make",
@@ -23,11 +23,13 @@
   },
   "homepage": "https://github.com/northcoders/be-nc-news#readme",
   "dependencies": {
-    "chai": "^4.2.0",
+    "express": "^4.17.1",
     "knex": "^0.20.11",
-    "mocha": "^7.1.0",
-    "pg": "^7.18.2",
-    "supertest": "^4.0.2"
+    "pg": "^7.18.2"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^7.1.0",
+    "supertest": "^4.0.2"
+  }
 }
